; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_common.c_b43_radio_maskset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_common.c_b43_radio_maskset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @b43_radio_maskset(%struct.b43_wldev* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.b43_wldev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load %struct.b43_wldev*, %struct.b43_wldev** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.b43_wldev*, %struct.b43_wldev** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @b43_radio_read16(%struct.b43_wldev* %11, i32 %12)
  %14 = load i32, i32* %7, align 4
  %15 = and i32 %13, %14
  %16 = load i32, i32* %8, align 4
  %17 = or i32 %15, %16
  %18 = call i32 @b43_radio_write16(%struct.b43_wldev* %9, i32 %10, i32 %17)
  ret void
}

declare dso_local i32 @b43_radio_write16(%struct.b43_wldev*, i32, i32) #1

declare dso_local i32 @b43_radio_read16(%struct.b43_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
